--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1"
   },
