--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "matheustodao",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index",
+    "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
   "dependencies": {
